--- a/app/index.html
+++ b/app/index.html
@@ -4,14 +4,12 @@
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
-		<h2>
-		Search for food
-		</h2>
+		<h2>Can My Dog Eat It?</h2>
 		<script type="text/javascript" src="bower_components/fuse.js/src/fuse.min.js"></script>
 		<script type="text/javascript" src="js/test.js"></script>
-		<input type="text" id="search" onkeydown="fuzzyFind()">
-		</input>
-		<div id="result-box">
-		</div>
+
+		<input type="text" id="search" onkeyup="fuzzyFind()" placeholder="search for food"></input>
+		<div id="result-box"></div>
+		<div id="showcase"></div>
 	</body>
 </html>
