--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<h2>Can My Dog Eat It?</h2>
-		<script type="text/javascript" src="bower_components/fuse.js/src/fuse.min.js"></script>
+		<script type="text/javascript" src="https://raw.githubusercontent.com/krisk/fuse/master/src/fuse.js"></script>
 		<script type="text/javascript" src="js/test.js"></script>
 
 		<input type="text" id="search" onkeyup="fuzzyFind()" placeholder="search for food"></input>
