--- a/app/index.html
+++ b/app/index.html
@@ -2,58 +2,13 @@
 <head>
 	<title>Can My Dog Eat It?</title>
 	<link href='https://fonts.googleapis.com/css?family=Raleway:800' rel='stylesheet' type='text/css'>
-	<style type="text/css">
-	html {
-		background-color: #02A5B4;
-		 font-family: 'Raleway';
-	}
-
-	.text {
-    color: #FFD100;
-    font-size: 5em;
-    text-shadow: 3px 3px 0 #E45645;
-    text-transform: uppercase;
-    font-family: 'Raleway';
-	}
-
-	input	{
-		background: none;
-		border: none;
-		color: #FFD100;
-		font-weight: 400;
-		font-size: 1em;
-		text-shadow: 3px 3px 0 #E45645;
-		text-align: center;
-		text-transform: uppercase;
-		border-bottom-style: solid;
-		border-bottom-width: 7px; 
-		width: 90%;
-		font-family: 'Raleway';
-	}
-
-	.center {
-    margin: auto;
-    width: 60%;
-	}
-
-	img.displayed {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    height: 25%; 
-  }
-
-  input:focus{
-		outline: none;
-	}
-	</style>
+	<link rel="stylesheet" type="text/css" href="css/flex.css">
 </head>
 <body>
-	<img class="displayed" src="css/DogHead.png">
-	<div class="text center"><b>Can My Dog Eat</b></div>
-	<div class="text center"> <input type="text" /> ?</div>
-
+	<div class="container">
+		<img class="displayed" src="css/DogHead.png">
+		<div class="text center"><b>Can My Dog Eat</b></div>
+		<div class="text center"><input type="text" />?</div>
+	</div>
 </body>
 </html>
